[tool.poetry]
name = "robotframework-robotmklibrary"
version = "1.0.0"
description = "A Robot Framework keyword library intended to be used with Robotmk."
authors = ["Jörg Herbel <joerg.herbel@checkmk.com>"]
packages = [
    { include = "RobotmkLibrary" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
isort = "*"
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
